force-app/main/default/objects/Daily_Usage__c/Daily_Usage__c.object-meta.xml
<CustomObject>
    <description>Interval data with a summary value for the date</description>
    <label>Daily Usage</label>
    <nameField>
        <label>Daily Usage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Daily Usages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>