force-app/main/default/objects/Daily_Usage__c/fields/Account_Premise_Association__c.field-meta.xml
<CustomField>
    <fullName>Account_Premise_Association__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Premise Association</label>
    <referenceTo>AccountPremiseAssociation__c</referenceTo>
    <relationshipLabel>Daily Usages</relationshipLabel>
    <relationshipName>Daily_Usages</relationshipName>
    <type>Lookup</type>
</CustomField>