force-app/main/default/objects/Daily_Usage__c/fields/Customer_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Email__c</fullName>
    <label>Customer&#39;s Email</label>
    <type>Email</type>
</CustomField>