force-app/main/default/objects/Daily_Usage__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Which date this usage occurred on</description>
    <inlineHelpText>Which date this usage occurred on</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>