force-app/main/default/objects/Daily_Usage__c/fields/Intervals__c.field-meta.xml
<CustomField>
    <fullName>Intervals__c</fullName>
    <description>Stores interval data, matches UHIT spec</description>
    <label>Intervals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>