force-app/main/default/objects/Daily_Usage__c/fields/Max_for_the_day__c.field-meta.xml
<CustomField>
    <fullName>Max_for_the_day__c</fullName>
    <label>Max for the day</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>