force-app/main/default/objects/Daily_Usage__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What order is this usage associated with?</description>
    <inlineHelpText>What order is this usage associated with?</inlineHelpText>
    <label>Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Daily Usages</relationshipLabel>
    <relationshipName>Daily_Usages</relationshipName>
    <type>Lookup</type>
</CustomField>