force-app/main/default/objects/Daily_Usage__c/fields/Premise__c.field-meta.xml
<CustomField>
    <fullName>Premise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Premise</label>
    <referenceTo>Premises__c</referenceTo>
    <relationshipLabel>Daily Usages</relationshipLabel>
    <relationshipName>Daily_Usages</relationshipName>
    <type>Lookup</type>
</CustomField>