force-app/main/default/objects/Daily_Usage__c/fields/Total_for_the_day__c.field-meta.xml
<CustomField>
    <fullName>Total_for_the_day__c</fullName>
    <label>Total for the day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>